namespaces/live.cloud-platform.service.justice.gov.uk/llm-webapp-test-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "llm-webapp-test-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "data-innovation-llm-infrastructure"
    cloud-platform.justice.gov.uk/application: "LLM Webapp Test"
    cloud-platform.justice.gov.uk/owner: "DMET BOLD: dataengineering@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/llm-webapp-test"
    cloud-platform.justice.gov.uk/team-name: "llm-document-summarisation-tool"
    cloud-platform.justice.gov.uk/review-after: "2024-11-02"
